cargo-features = ["profile-rustflags", "panic-immediate-abort"]

[workspace]
resolver = "3"
members = [
    "crates/minijinja-lua",
    "crates/rsjson-lua",
    "crates/rsre-lua",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "immediate-abort"
codegen-units = 1
rustflags = [
    "-Zlocation-detail=none",
    "-Zfmt-debug=none",
]

[profile.release.package.rsjson_lua]
opt-level = 3
