cargo-features = ["profile-rustflags", "panic-immediate-abort"]

[workspace]
resolver = "3"
members = [
    "crates/jsonschema-lua",
    "crates/minijinja-lua",
    "crates/rsast-lua",
    "crates/rsjson-lua",
    "crates/rsre-lua",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "unwind"
codegen-units = 1
rustflags = [
    "-Zlocation-detail=none",
]

[profile.release.package.rsjson-lua]
opt-level = 3

[profile.release.package.jsonschema-lua]
opt-level = 3
