cargo-features = ["profile-rustflags", "panic-immediate-abort"]

[package]
name = "jsonschema-lua"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/benniekiss/rs-mod-lua"
license = "MIT"
description = "a json schema validation lua module using the jsonschema rust crate"

[lib]
name = "jsonschema_lua"
crate-type = ["cdylib"]

[features]
default = ["lua54", "vendored", "async"]
lua55 = ["mlua/lua55"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
vendored = ["mlua/vendored"]
module = ["mlua/module"]
async = ["mlua/async", "jsonschema/resolve-async"]
arbitrary-precision = [
    "jsonschema/arbitrary-precision",
    "serde_json/arbitrary_precision",
]

[dependencies]
jsonschema = "0.46.5"
mlua = { version = "0.12.0-rc.2", features = ["serde", "macros"] }
rsjson-lua = { version = "0.5.0", default-features = false }
serde_json = { version = "1.0.150", features = [
    "preserve_order",
    "float_roundtrip",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
# panic = "immediate-abort"
codegen-units = 1
rustflags = [
    "-Zlocation-detail=none",
    # "-Zfmt-debug=none",
]
