cargo-features = ["profile-rustflags", "panic-immediate-abort"]

[package]
name = "rsast-lua"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/benniekiss/rs-mod-lua"
license = "MIT"
description = "an ast parsing lua module using the pest rust crate"

[lib]
name = "rsast_lua"
crate-type = ["cdylib"]

[features]
default = ["lua54", "vendored"]
lua55 = ["mlua/lua55"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
vendored = ["mlua/vendored"]
module = ["mlua/module"]

[dependencies]
mlua = { version = "0.12.0", features = ["macros"] }
pest_meta = "2.8.7"
pest_vm = "2.8.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "unwind"
codegen-units = 1
rustflags = [
    "-Zlocation-detail=none",
    "-Zfmt-debug=none",
]
