cargo-features = ["profile-rustflags", "panic-immediate-abort"]

[package]
name = "rsfs-lua"
version = "0.2.5"
edition = "2024"
readme = "README.md"
repository = "https://github.com/benniekiss/rs-mod-lua"
license = "MIT"
description = "a filesystem lua module using rust `std::fs`"

[lib]
name = "rsfs_lua"
crate-type = ["cdylib"]

[features]
default = ["lua54", "vendored", "contrib"]
lua55 = ["mlua/lua55"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
vendored = ["mlua/vendored"]
module = ["mlua/module"]
contrib = ["dirs", "tempfile", "walkdir"]
dirs = ["dep:dirs"]
tempfile = ["dep:tempfile"]
walkdir = ["dep:walkdir"]

[dependencies]
dirs = { version = "6.0.0", optional = true }
mlua = { version = "0.12.0-rc.2", features = ["macros"] }
tempfile = { version = "3.27.0", optional = true }
walkdir = { version = "2.5.0", optional = true }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "immediate-abort"
codegen-units = 1
rustflags = [
    "-Zlocation-detail=none",
    "-Zfmt-debug=none",
]
